--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
          stop of the gradient adds a translucent layer on top of the photo. */
       background: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),
                   /* Use the flyer artwork as a background and position it so that the text from the flyer is mostly cropped out. */
-                  url('hero.png') center top/cover no-repeat;
+                  url('hero1.png') center top/cover no-repeat;
       color: #fff;
       min-height: 70vh;
       display: flex;
